force-app/main/default/objects/Course_Contact__c/Course_Contact__c.object-meta.xml
<CustomObject>
    <description>Contacts - Candidates who are on a course</description>
    <label>Course Contact</label>
    <nameField>
        <displayFormat>CC-{000000}</displayFormat>
        <label>CCID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Course Contacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>