force-app/main/default/objects/Course_Contact__c/fields/Candidate__c.field-meta.xml
<CustomField>
    <fullName>Candidate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Candidate</label>
    <referenceTo>Candidate__c</referenceTo>
    <relationshipLabel>Course Contacts</relationshipLabel>
    <relationshipName>Course_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>