force-app/main/default/objects/Course_Contact__c/fields/Candidate_Full_NAme__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Full_NAme__c</fullName>
    <formula>Candidate__r.FullName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Candidate Full Name</label>
    <type>Text</type>
</CustomField>