force-app/main/default/objects/Course_Contact__c/fields/Course__c.field-meta.xml
<CustomField>
    <fullName>Course__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The course that the candidate is enrolled in</description>
    <label>Course</label>
    <referenceTo>Course__c</referenceTo>
    <relationshipLabel>Course Contacts</relationshipLabel>
    <relationshipName>Course_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>